--- a/src/makefile-options
+++ b/src/makefile-options
@@ -8,7 +8,7 @@
 
 
 TARGET   := firmware  # the name we want for our program binary
-KEYBOARD := dactyl   # keyboard model; see "src/keyboard" for what's available
+KEYBOARD := manuform   # keyboard model; see "src/keyboard" for what's available
 LAYOUT   := qwerty-kinesis-mod  # keyboard layout
 				# see "src/keyboard/*/layout" for what's
 				# available
